# rofi-plugin-specialchars

./: LICENSE  Makefile.am  README.md  configure.ac
resources/: copy_insert.sh  emojis-simple.txt  emojis.txt  fetch_emojis.sh  kaomojis.txt
src/: emojis_plugin.c  kaomojis_plugin.c
